# rssmailer

./: .env  .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md
.github/workflows/: rust.yml
backend/: Cargo.toml
backend/migrations/: 20210906034919_account.sql
backend/src/: main.rs
backend/src/db/: account.rs  account_test.rs  mod.rs  rssfeed.rs  rssfeed_test.rs
backend/src/handlers/: account.rs  account_test.rs  authentication.rs  error.rs  mod.rs  rssfeed.rs  rssfeed_test.rs
backend/src/services/: mailer.rs  mailer_test.rs  mod.rs
frontend/: .packages  pubspec.yaml
frontend/.dart_tool/: package_config.json  package_config_subset
frontend/android/app/: build.gradle
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: account_repository.dart  auth_bloc.dart  auth_repository.dart  login_bloc.dart  login_page.dart  main.dart
frontend/lib/model/: account.dart  account.g.dart
frontend/rssmailer/: .packages  README.md
frontend/rssmailer/.dart_tool/: package_config.json  package_config_subset
frontend/rssmailer/android/: local.properties
frontend/rssmailer/lib/: account_repository.dart  (+4 more)
frontend/test/: auth_repo_test.dart  login_bloc_test.dart  widget_test.dart
frontend/web/: index.html  manifest.json
migrations/: 20210830055055_rssfeed.sql  20210830055100_account.sql
resource/: content.html  pg_commands.sh  sample.html  title.html  total.html
src/db/: mod.rs
src/handlers/: account.rs  account_test.rs  error.rs  index.rs  mod.rs  rssfeed_test.rs
src/services/: mailer.rs  mailer_test.rs
(+9 files in other folders)
